Mejoro estilos y logica de seleccionar-mascota.

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -2,7 +2,7 @@
     padding: $space-l 0;
     .header__title{
         font-family: 'Bungee Shade', cursive;
-        font-size: $maintitle;
+        font-size: $title-xl;
         color: $white;
         text-align: center;
         line-height: 1;
