--- a/css/main.css
+++ b/css/main.css
@@ -17,36 +17,129 @@ html {
 body {
   background-color: #305973; }
 
+body {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: auto; }
+  body header {
+    grid-column: 1 / 4; }
+  body main {
+    grid-column: 2; }
+  body footer {
+    grid-column: 1 / 4; }
+
 /* PARTIALS */
 .header {
   padding: 6.4rem 0; }
   .header .header__title {
     font-family: 'Bungee Shade', cursive;
-    font-size: 9.6em;
+    font-size: 5.6em;
     color: #F9F9F9;
     text-align: center;
     line-height: 1; }
 
+footer .footer__container {
+  padding: 1.6rem;
+  margin: 6.4rem 0.8rem 0.8rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
+  background-color: rgba(249, 249, 249, 0.2);
+  border-radius: 15px;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: center; }
+  footer .footer__container .footer__txt {
+    max-width: 195px;
+    font-size: 1.4em;
+    color: #F9F9F9;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 200; }
+  footer .footer__container .footer__title {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3.2rem; }
+    footer .footer__container .footer__title .footer__title--up .footerTitle__up--img {
+      width: 62px; }
+    footer .footer__container .footer__title .footer__title--down .footerTitle__down--txtname {
+      font-family: 'bungee shade';
+      color: #F9F9F9;
+      font-size: 2.4em;
+      line-height: 1; }
+    footer .footer__container .footer__title .footer__title--down .footerTitle__down--txt {
+      font-family: 'bungee';
+      color: #F9F9F9;
+      font-size: 1.2em;
+      line-height: 1; }
+  footer .footer__container .footer__social {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3.2rem; }
+    footer .footer__container .footer__social .footer__social--link .footer__social--img {
+      width: 45px; }
+
 /* PAGES */
-body {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: auto; }
-
-header {
-  grid-column: 1 / 4; }
-
-main {
-  grid-column: 2; }
-
-footer {
-  grid-column: 3 / 4; }
-
-#selectPet {
+.selectPet {
   padding: 3.2rem;
   background-color: #EF7E56;
-  border-radius: 15px; }
-  #selectPet .selectPet__article .selectPet__subtitle {
-    color: #F9F9F9;
-    font-family: 'bungee';
-    font-size: 3.2em; }
+  border-radius: 15px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25); }
+  .selectPet .selectPet__article {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
+    row-gap: 3.2rem; }
+    .selectPet .selectPet__article .selectPet__subtitle {
+      color: #F9F9F9;
+      font-family: 'bungee';
+      font-size: 3.2em;
+      line-height: 1;
+      text-align: center; }
+    .selectPet .selectPet__article .selectPet__button .button--pet {
+      text-align: center;
+      font-family: 'bungee';
+      font-size: 2.2em;
+      color: #F9F9F9;
+      background-color: #305973;
+      line-height: 1;
+      padding: 1.6rem 3.2rem;
+      border: none;
+      border-radius: 15px;
+      transition: all .4s;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25); }
+    .selectPet .selectPet__article .selectPet__button .button--pet:hover {
+      color: #305973;
+      background-color: #F9F9F9; }
+    .selectPet .selectPet__article .selectPet__card {
+      display: grid;
+      grid-template-columns: auto auto auto;
+      grid-template-rows: auto;
+      gap: 6.4rem; }
+      .selectPet .selectPet__article .selectPet__card .petCard {
+        padding: 3.2rem;
+        background-color: rgba(249, 249, 249, 0.2);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
+        border-radius: 15px;
+        transition: all .4s; }
+        .selectPet .selectPet__article .selectPet__card .petCard .petCard__input {
+          display: none; }
+        .selectPet .selectPet__article .selectPet__card .petCard .petCard__label {
+          text-align: center;
+          color: #F9F9F9;
+          font-family: 'bungee';
+          font-size: 1.8em;
+          line-height: 1;
+          transition: all .4s; }
+        .selectPet .selectPet__article .selectPet__card .petCard .petCard__img {
+          width: 140px; }
+      .selectPet .selectPet__article .selectPet__card .petCard:hover {
+        background-color: #F9F9F9;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25); }
+        .selectPet .selectPet__article .selectPet__card .petCard:hover .petCard__label {
+          color: #305973; }
+    .selectPet .selectPet__article .petCard__input:checked ~ .petCard {
+      background-color: red; }
