--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,11 +5,12 @@
 @import './misc/variables';
 @import './misc/normalize';
 @import './misc/mixins';
+@import './misc/laytout';
 
 /* PARTIALS */
 @import './partials/cards';
-@import './partials/footer';
 @import './partials/header';
+@import './partials/footer';
 
 /* PAGES */
 // HOME
