--- a/scss/misc/_variables.scss
+++ b/scss/misc/_variables.scss
@@ -14,6 +14,7 @@
 
     /* Font Sizes */
     $maintitle: 9.6em;
+    $title-xl: 5.6em;
     $title: 4.8em;
     $sub-title: 3.2em;
     $txt-xl: 2.4em;
@@ -22,6 +23,7 @@
     $txt-s: 1.8em;
     $txt-xs: 1.6em;
     $caption: 1.4em;
+    $caption-s: 1.2em;
 
     /* Spacings */
     $space-xl: 12.8rem;
