--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,31 +1,80 @@
-// LAYOUT
-body {
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    grid-template-rows: auto;
-}
 
-header {
-    grid-column: 1 / 4;
-}
-
-main {
-    grid-column: 2;
-}
-
-footer {
-    grid-column: 3 / 4;
-}
-
-#selectPet{
+// SELECCIONAR MASCOTA
+.selectPet{
     padding: $space-m;
     background-color: $orange;
     border-radius: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
     .selectPet__article{
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-between;
+        align-items: center;
+        row-gap: $space-m;
         .selectPet__subtitle{
             color: $white;
             font-family: 'bungee';
             font-size: $sub-title;
+            line-height: 1;
+            text-align: center;
         }
+        .selectPet__button{
+            .button--pet{
+                text-align: center;
+                font-family: 'bungee';
+                font-size: $txt-l;
+                color: $white;
+                background-color: $blue;
+                line-height: 1;
+                padding: $space-s $space-m;
+                border: none;
+                border-radius: 15px;
+                transition: all .4s;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
+            }
+            .button--pet:hover{
+                color: $blue;
+                background-color: $white;
+            }
+        }
+        .selectPet__card{
+            display: grid;
+            grid-template-columns: auto auto auto;
+            grid-template-rows: auto;
+            gap: $space-l;
+            .petCard{
+                padding: $space-m;
+                background-color: rgba(249, 249, 249, 0.2);
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
+                border-radius: 15px;
+                transition: all .4s;
+                .petCard__input{
+                    display: none;
+                }
+                .petCard__label{
+                    text-align: center;
+                    color: $white;
+                    font-family: 'bungee';
+                    font-size: $txt-s;
+                    line-height: 1;
+                    transition: all .4s;
+                }
+                .petCard__img{
+                    width: 140px;
+                    //max-height: 141px;
+                }
+            }
+            .petCard:hover{
+                background-color: $white;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
+                .petCard__label{
+                    color: $blue;
+                }
+            }
+        }
+        .petCard__input:checked ~ .petCard {
+            background-color: red;
+          }
     }
 }
+
